2007-11-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-send-mail-function): New function.
	(message-send-mail-function): Set default using
	message-send-mail-function.  Adjust doc string.
	(message-send-mail-with-mailclient): New function.

2007-11-17  Richard Stallman  <rms@gnu.org>

	* assistant.el: Remove file.

2007-11-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* smime.el (from):
	* rfc2047.el (message-posting-charset):
	* qp.el (mm-use-ultra-safe-encoding):
	* pop3.el (parse-time-months):
	* nnrss.el (mm-text-html-renderer, mm-text-html-washer-alist):
	* nnml.el (files):
	* nnheader.el (gnus-newsgroup-name, nnheader-file-coding-system)
	(jka-compr-compression-info-list, ange-ftp-path-format)
	(efs-path-regexp):
	* nndiary.el (files):
	* mml2015.el (mc-default-scheme, mc-schemes, pgg-default-user-id)
	(pgg-errors-buffer, pgg-output-buffer, epg-user-id-alist)
	(epg-digest-algorithm-alist, inhibit-redisplay)
	(password-cache-expiry):
	* mml1991.el (pgg-default-user-id, pgg-errors-buffer)
	(pgg-output-buffer, password-cache-expiry):
	* mml.el (mml-dnd-protocol-alist, ange-ftp-name-format)
	(efs-path-regexp):
	* mml-smime.el (epg-user-id-alist, epg-digest-algorithm-alist)
	(inhibit-redisplay):
	* mm-uu.el (file-name, start-point, end-point, entry)
	(gnus-newsgroup-name, gnus-newsgroup-charset):
	* mm-util.el (mm-mime-mule-charset-alist, latin-unity-coding-systems)
	(latin-unity-ucs-list):
	* mm-bodies.el (mm-uu-yenc-decode-function, mm-uu-decode-function)
	(mm-uu-binhex-decode-function):
	* message.el (gnus-message-group-art, gnus-list-identifiers, )
	(rmail-enable-mime-composing, gnus-local-organization)
	(gnus-post-method, gnus-select-method, gnus-active-hashtb)
	(gnus-read-active-file, facemenu-add-face-function)
	(facemenu-remove-face-function, gnus-article-decoded-p)
	(tool-bar-mode):
	* mail-source.el (display-time-mail-function):
	* gnus-util.el (nnmail-pathname-coding-system)