@@ -1,5 +1,8 @@
 2007-11-20  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* utf7.el (utf7-encode, utf7-decode): Use coding system
+	`utf-7'/`utf-7-imap' from utf-7.el' if available.
+
 	* message.el (message-send-mail-function): New function.
 	(message-send-mail-function): Set default using
 	message-send-mail-function.  Adjust doc string.
